# online-lesson-manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile.bot  Dockerfile.scheduler  README.md  TODO.md  alembic.ini  docker-compose.yml  main.py  migration_script.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 10fbcd269617_add_scheduled_lesson.py  7bb7987d7919_create_db.py  a049f3b78bc4_initial.py
backend/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/: copilot-instructions.md
backend/alembic/: env.py
backend/alembic/versions/: 20260113_153229_create_lessons_table.py  20260113_185411_add_user_and_teacher_settings_.py  20260113_192240_use_native_datetime_types.py  20260113_200151_add_user_history_and_recurrent_cancels.py  20260116_153415_add_token_to_user.py  20260116_171137_events.py  20260118_150243_add_tokens_and_history.py  20260118_151926_use_timezone_aware_timestamps.py  20260121_odd_even_sequences.py  20260124_172148_add_notifications.py  20260125_145813_add_user_settings.py  20260208_071010_big_integer.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  events.py  health.py  internal.py  lessons.py  schedule.py  users.py
backend/app/core/: config.py  exceptions.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  events.py  internal.py  lesson.py  users.py
backend/app/repositories/: __init__.py  base.py  events.py  internal.py  lesson.py  user.py
backend/app/schemas/: __init__.py  events.py  internal.py  lesson.py  response.py  schedule.py  user.py
backend/app/services/: __init__.py  auth.py  bot_cache.py  cleanup.py  events.py  internal.py  lesson.py  users.py
backend/tests/: conftest.py  test_schedule.py
db/: db.sqlite-journal  work_schedule.json
frontend/: .dockerignore  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CalendarDay.tsx  EventModal.tsx  HelpModal.tsx  LanguageSwitch.tsx  LoginView.tsx  MonthView.tsx  WeekView.tsx
frontend/src/hooks/: useCalendarEvents.ts
frontend/src/services/: authService.ts  eventService.ts  i18nService.ts  unavailableSlotService.ts
frontend/src/types/: index.ts
frontend/src/utils/: validation.ts
migration/: env.py
migration/versions/: 1fb60c5e38ee_add_vacations_for_students.py  32f1d01e1170_student_teacher_models.py  377fda9f1ab5_correct_v1_0_0_version_db.py  5a29eb4e8832_add_username.py  8c177dcb9394_initial.py
migrations/: env.py
migrations/versions/: cc2782a9b737_homeworks.py  d7e4a1874856_initial_migration.py
online_lesson_manager/: database.py  handlers.py  keyborads.py  logger.py  models.py  utils.py
online_lesson_manager/config/: config.py
scripts/: backup.sh  check_remote_changes.sh  update.sh
src/: callbacks.py  database.py  errors.py  handlers.py  help.py  keyboards.py  keyborads.py  logger.py  main.py  messages.py  middlewares.py  models.py  repositories.py  scheduler.py  service.py  services.py  states.py  utils.py
src/commands/: __init__.py  add_lesson.py  cancel.py  check_notify.py  help.py  reschedule_lesson.py  send_to_everyone.py  set_working_hours.py  start.py  today_schedule.py  week_schedule.py
src/commands/reschedule/: __init__.py  config.py  forever.py  handler.py  once.py
src/commands/set_working_hours/: __init__.py  breaks.py  handler.py  vacations.py  weekends.py  work_hours.py
src/config/: base.py  config.py  help.py  logs.py  menu.py  messages.py  notifications.py  settings.py
src/core/: config.py  errors.py  help.py  logs.py  middlewares.py
src/db/: database.py  getters.py  models.py  repositories.py  schemas.py
src/general/: handlers.py  keyboards.py
src/interface/: keyboards.py  utils.py
src/lessons/: callbacks.py  handlers.py  keyboards.py  utils.py
src/messages/: buttons.py  errors.py  replies.py
src/models/: mixins.py  reschedule.py  student.py  teacher.py  user.py
src/repositories/: __init__.py  abstract.py  lessons.py  restrictions.py  user.py  users.py
src/routers/: __init__.py  add_lesson.py  add_one_lesson.py  callbacks.py  check_notify.py  send_to_everyone.py  states.py  today_schedule.py  vacations.py  week_schedule.py
src/service/: __init__.py  lessons.py  schedule.py  services.py  user.py  utils.py
src/structures/: role.py
src/teacher/: callbacks.py  handlers.py  keyboards.py  states.py  utils.py
src2/models/: __init__.py  mixins.py  student.py  teacher.py  user.py
telegram/: .gitignore  Dockerfile.bot  README.md  docker-compose.yml  pyproject.toml  validate_imports.py
telegram/.github/: copilot-instructions.md
telegram/src/: main.py  utils.py
telegram/src2/: backend_client.py  cache.py  handlers.py
telegram/tests/: conftest.py  test_dispatcher_auto_breaks.py
tests/: conftest.py  test_create_lessons.py  test_dispatcher_auto_breaks.py
tests/service/: test_lessons.py
(+135 files in other folders)
