[tool.poetry]
name = "online-lesson-manager"
version = "0.3.2"
description = ""
authors = ["SaraFarron <sarafarron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
pytz = "^2024.1"
alembic = "^1.13.2"
sqlalchemy-utils = "^0.41.2"
aiojobs = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
