[tool.poetry]
name = "online-lesson-manager"
version = "2.0.0"
description = ""
package-mode = false
authors = ["SaraFarron <https://github.com/users/SaraFarron>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
pytz = "^2024.1"
alembic = "^1.13.2"
sqlalchemy-utils = "^0.41.2"
aiojobs = "^1.3.0"
pytest = "^8.4.1"
freezegun = "^1.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### specific rules
    "ASYNC109",
    "BLE001",
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "DTZ005",
    "DTZ007",
    "E741",
    "TRY002",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "RUF012",
    "RUF002",
    "RUF003",
    "RUF001",
	"ANN101",
    "ANN201",
    "ANN202",
    "ANN205",
	"PTH123",
    "PTH207",
	"S101",
    "S311",
    "S321",
    "S603",
    "PT009",
    "T201",
	"TCH001",
    "TCH002",
    "TCH003",
    "TRY004",
	"E701",
    "EM101",
    "FBT001",
    "FBT002",
    "FBT003",
    "W293",
]
[tool.basedpyright]
reportArgumentType = false
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportAny = false
reportOptionalMemberAccess = false
reportCallIssue = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeArgument = false
reportAttributeAccessIssue = false
reportUnusedCallResult = false
reportPrivateLocalImportUsage = false
reportUnnecessaryComparison = false
reportGeneralTypeIssues = false
reportOperatorIssue = false
reportPossiblyUnboundVariable = false
reportOptionalSubscript = false
reportImplicitRelativeImport = false
reportUnusedFunction = false
reportIncompatibleMethodOverride = false
reportExplicitAny = false
reportIndexIssue = false
reportUnknownLambdaType = false
reportUnusedParameter = false
